docs/apache-airflow-providers-databricks/3.1.0/_sources/_api/airflow/providers/databricks/utils/databricks/index.rst.txt
:py:mod:`airflow.providers.databricks.utils.databricks`
=======================================================

.. py:module:: airflow.providers.databricks.utils.databricks


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.databricks.utils.databricks.deep_string_coerce
   airflow.providers.databricks.utils.databricks.validate_trigger_event



.. py:function:: deep_string_coerce(content, json_path = 'json')

   Coerces content or all values of content if it is a dict to a string. The
   function will throw if content contains non-string or non-numeric types.
   The reason why we have this function is because the ``self.json`` field must be a
   dict with only string values. This is because ``render_template`` will fail
   for numerical values.


.. py:function:: validate_trigger_event(event)

   Validates correctness of the event
   received from :class:`~airflow.providers.databricks.triggers.databricks.DatabricksExecutionTrigger`


